# workspace2018_OOP

./: .gitignore  Readme  readme.md
.metadata/: version.ini
Blatt1_Doxygen/: .cproject  .project
Blatt1_Doxygen/doxy/: Doxyfile  Doxygen für alle Projekte (aus Blatt1_Doxygen).launch
Blatt1_Doxygen/src/: Blatt1_Doxygen.cpp
Blatt1_Eigen/: .project
Blatt1_Eigen/src/: Blatt1_Eigen.cpp
Blatt1_OpenCV_ReadAndDisplayImage/: .cproject  .project
Blatt1_OpenCV_ReadAndDisplayImage/src/: Blatt1_OpenCV_ReadAndDisplayImage.cpp
Blatt1_OpenCV_WebcamCanny/: .project
Blatt1_OpenCV_WebcamCanny/src/: Blatt1_OpenCV_WebcamCanny.cpp
Blatt2/: .cproject  .project
Blatt3/: .cproject  .project
Blatt3/src/: CForwardCounter.hpp  CVariableCounter.cpp  CVariableCounter.hpp  derGroessere.hpp  mainBlatt3.cpp
Blatt4/: .project
Blatt4/src/: CEntry.cpp  CSwapper.cpp  CSwapper.hpp  mainBlatt4.cpp
Blatt5/: .project
Blatt5/src/: mainBlatt5.cpp
Blatt6/: .project
Blatt6/src/: CEntry.cpp  CKnot.cpp  CKnot.hpp
Blatt7/: .project
Blatt7/src/: CCounter.cpp  CCounterObserver.cpp  CCounterObserver.hpp  CForwardCounter.cpp  CStalker.cpp  CStalker.hpp  mainBlatt7.cpp
Blatt8/: .cproject  .project
Blatt8/src/: CArray.hpp  CBaum.hpp  main.cpp
BlattJ/: .classpath  .project
CPP-Beispiele/: .cproject  .project  Makefile
CPP-Beispiele/01_HelloWorld/: main.cpp
IncludeHeaderTest/: .cproject  .project  makefile
S_Blatt2/: .cproject  .project
cmakeTest/src/: CMakeLists.txt  Quadrat.cpp  Quadrat.hpp  main.cpp
project/: .project
project_check/: .project
(+1146 files in other folders)
